--- a/HTML/index.html
+++ b/HTML/index.html
@@ -29,13 +29,13 @@
                     <div class="calculate">
                         <input type="text" name="display" placeholder="0">
                     </div>
-                    <div>
+                    <!-- <div>
                         <input type="button" value="MC" class="ms">
                         <input type="button" value="MR" class="ms">
                         <input type="button" value="M+" class="ms">
                         <input type="button" value="MS" class="ms">
                         <input type="button" value="MR" class="ms">
-                    </div>
+                    </div> -->
                     <div class="board">
                         <div>
                             <input type="button" value="AC" class="operator" onclick="display.value=''">
